fix overflow pushing out top containers

--- a/app/assets/stylesheets/components/_comment_index.scss
+++ b/app/assets/stylesheets/components/_comment_index.scss
@@ -41,3 +41,7 @@ ul.comment-index {
   display: flex;
   flex-direction: column-reverse;
 }
+
+.track-detail-user-info {
+  display: flex;
+}
