--- a/app/assets/stylesheets/components/_landing_page.scss
+++ b/app/assets/stylesheets/components/_landing_page.scss
@@ -3,6 +3,7 @@ section#most-recent {
   padding-top: 100px;
   background: white;
   width: 1200px;
+  margin-top: 46px;
 }
 
 h1#new-tracks-header {
